@@ -1,5 +1,5 @@
 /*
- * $Id: instance.c,v 1.44 2008/09/10 18:58:43 buccella Exp $
+ * $Id: instance.c,v 1.45 2008/11/21 20:23:51 mchasal Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -719,6 +719,12 @@ CMPIInstance *internal_new_CMPIInstance(int mode, const CMPIObjectPath * cop,
    else {
       instance.instance.hdl = ClInstanceNew(ns, cn);
 
+#ifdef HAVE_DEFAULT_PROPERTIES
+   if(!override) {
+      instFillDefaultProperties(&instance,ns,cn);
+   }
+#endif
+
       while (j-- && (tmp1.rc == CMPI_RC_OK)) {
          CMPIString *keyName;
          CMPIData tmp = CMGetKeyAt(cop, j, &keyName, &tmp1);
@@ -731,12 +737,6 @@ CMPIInstance *internal_new_CMPIInstance(int mode, const CMPIObjectPath * cop,
    tInst=memAddEncObj(mode, &instance, sizeof(instance),&state);
    tInst->mem_state=state;
    tInst->refCount=0;
-   
-#ifdef HAVE_DEFAULT_PROPERTIES
-   if(!override) {
-      instFillDefaultProperties(tInst,ns,cn);
-   }
-#endif
 
    return (CMPIInstance*)tInst;
 }
